deploy/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: postgres
          image: quay.io/sclorg/postgresql-15-c9s:latest

          ports:
            - containerPort: 5432

          readinessProbe:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - pg_isready -h 127.0.0.1 -p 5432 -U "$POSTGRESQL_USER" -d "$POSTGRESQL_DATABASE"
              periodSeconds: 5
              timeoutSeconds: 3
              failureThreshold: 3
