deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: task-manager
spec:
  replicas: 2

  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
        - name: task-manager
          image: image-registry.openshift-image-registry.svc:5000/task-manager/task-manager:latest
          ports:
            - containerPort: 8080
